# pomodoro-premium

./: .gitignore  BUILD.md  LICENSE  README.md  abrir-pomodoro.bat  abrir-pomodoro.ps1  index.html  manifest.json  service-worker.js
src-tauri/: .gitignore  Cargo.toml  copy-frontend.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: base.css  components.css  responsive.css  themes.css
src/js/: app.js  audio.js  notifications.js  pwa.js  settings.js  storage.js  theme.js  timer.js
